gtkD/wrap/cHeaders/GL/gl.d


const GL_ARB_multitexture = 1;
//C     #define GL_TEXTURE0_ARB				0x84C0
//C     #define GL_TEXTURE1_ARB				0x84C1
const GL_TEXTURE0_ARB = 0x84C0;
//C     #define GL_TEXTURE2_ARB				0x84C2
const GL_TEXTURE1_ARB = 0x84C1;
//C     #define GL_TEXTURE3_ARB				0x84C3
const GL_TEXTURE2_ARB = 0x84C2;
//C     #define GL_TEXTURE4_ARB				0x84C4
const GL_TEXTURE3_ARB = 0x84C3;
//C     #define GL_TEXTURE5_ARB				0x84C5
const GL_TEXTURE4_ARB = 0x84C4;
//C     #define GL_TEXTURE6_ARB				0x84C6
const GL_TEXTURE5_ARB = 0x84C5;
//C     #define GL_TEXTURE7_ARB				0x84C7
const GL_TEXTURE6_ARB = 0x84C6;
//C     #define GL_TEXTURE8_ARB				0x84C8
const GL_TEXTURE7_ARB = 0x84C7;
//C     #define GL_TEXTURE9_ARB				0x84C9
const GL_TEXTURE8_ARB = 0x84C8;
//C     #define GL_TEXTURE10_ARB			0x84CA
const GL_TEXTURE9_ARB = 0x84C9;
//C     #define GL_TEXTURE11_ARB			0x84CB
const GL_TEXTURE10_ARB = 0x84CA;
//C     #define GL_TEXTURE12_ARB			0x84CC
const GL_TEXTURE11_ARB = 0x84CB;
//C     #define GL_TEXTURE13_ARB			0x84CD
const GL_TEXTURE12_ARB = 0x84CC;
//C     #define GL_TEXTURE14_ARB			0x84CE
const GL_TEXTURE13_ARB = 0x84CD;
//C     #define GL_TEXTURE15_ARB			0x84CF
const GL_TEXTURE14_ARB = 0x84CE;
//C     #define GL_TEXTURE16_ARB			0x84D0
const GL_TEXTURE15_ARB = 0x84CF;
//C     #define GL_TEXTURE17_ARB			0x84D1
const GL_TEXTURE16_ARB = 0x84D0;
//C     #define GL_TEXTURE18_ARB			0x84D2
const GL_TEXTURE17_ARB = 0x84D1;
//C     #define GL_TEXTURE19_ARB			0x84D3
const GL_TEXTURE18_ARB = 0x84D2;
//C     #define GL_TEXTURE20_ARB			0x84D4
const GL_TEXTURE19_ARB = 0x84D3;
//C     #define GL_TEXTURE21_ARB			0x84D5
const GL_TEXTURE20_ARB = 0x84D4;
//C     #define GL_TEXTURE22_ARB			0x84D6
const GL_TEXTURE21_ARB = 0x84D5;
//C     #define GL_TEXTURE23_ARB			0x84D7
const GL_TEXTURE22_ARB = 0x84D6;
//C     #define GL_TEXTURE24_ARB			0x84D8
const GL_TEXTURE23_ARB = 0x84D7;
//C     #define GL_TEXTURE25_ARB			0x84D9
const GL_TEXTURE24_ARB = 0x84D8;
//C     #define GL_TEXTURE26_ARB			0x84DA
const GL_TEXTURE25_ARB = 0x84D9;
//C     #define GL_TEXTURE27_ARB			0x84DB
const GL_TEXTURE26_ARB = 0x84DA;
//C     #define GL_TEXTURE28_ARB			0x84DC
const GL_TEXTURE27_ARB = 0x84DB;
//C     #define GL_TEXTURE29_ARB			0x84DD
const GL_TEXTURE28_ARB = 0x84DC;
//C     #define GL_TEXTURE30_ARB			0x84DE
const GL_TEXTURE29_ARB = 0x84DD;
//C     #define GL_TEXTURE31_ARB			0x84DF
const GL_TEXTURE30_ARB = 0x84DE;
//C     #define GL_ACTIVE_TEXTURE_ARB			0x84E0
const GL_TEXTURE31_ARB = 0x84DF;
//C     #define GL_CLIENT_ACTIVE_TEXTURE_ARB		0x84E1
const GL_ACTIVE_TEXTURE_ARB = 0x84E0;
//C     #define GL_MAX_TEXTURE_UNITS_ARB		0x84E2
const GL_CLIENT_ACTIVE_TEXTURE_ARB = 0x84E1;

const GL_MAX_TEXTURE_UNITS_ARB = 0x84E2;
//C     GLAPI void GLAPIENTRY glActiveTextureARB(GLenum texture);
void  glActiveTextureARB(GLenum texture);
//C     GLAPI void GLAPIENTRY glClientActiveTextureARB(GLenum texture);
void  glClientActiveTextureARB(GLenum texture);
//C     GLAPI void GLAPIENTRY glMultiTexCoord1dARB(GLenum target, GLdouble s);
void  glMultiTexCoord1dARB(GLenum target, GLdouble s);
//C     GLAPI void GLAPIENTRY glMultiTexCoord1dvARB(GLenum target, const GLdouble *v);
void  glMultiTexCoord1dvARB(GLenum target, GLdouble *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord1fARB(GLenum target, GLfloat s);
void  glMultiTexCoord1fARB(GLenum target, GLfloat s);
//C     GLAPI void GLAPIENTRY glMultiTexCoord1fvARB(GLenum target, const GLfloat *v);
void  glMultiTexCoord1fvARB(GLenum target, GLfloat *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord1iARB(GLenum target, GLint s);
void  glMultiTexCoord1iARB(GLenum target, GLint s);
//C     GLAPI void GLAPIENTRY glMultiTexCoord1ivARB(GLenum target, const GLint *v);
void  glMultiTexCoord1ivARB(GLenum target, GLint *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord1sARB(GLenum target, GLshort s);
void  glMultiTexCoord1sARB(GLenum target, GLshort s);
//C     GLAPI void GLAPIENTRY glMultiTexCoord1svARB(GLenum target, const GLshort *v);
void  glMultiTexCoord1svARB(GLenum target, GLshort *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord2dARB(GLenum target, GLdouble s, GLdouble t);
void  glMultiTexCoord2dARB(GLenum target, GLdouble s, GLdouble t);
//C     GLAPI void GLAPIENTRY glMultiTexCoord2dvARB(GLenum target, const GLdouble *v);
void  glMultiTexCoord2dvARB(GLenum target, GLdouble *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord2fARB(GLenum target, GLfloat s, GLfloat t);
void  glMultiTexCoord2fARB(GLenum target, GLfloat s, GLfloat t);
//C     GLAPI void GLAPIENTRY glMultiTexCoord2fvARB(GLenum target, const GLfloat *v);
void  glMultiTexCoord2fvARB(GLenum target, GLfloat *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord2iARB(GLenum target, GLint s, GLint t);
void  glMultiTexCoord2iARB(GLenum target, GLint s, GLint t);
//C     GLAPI void GLAPIENTRY glMultiTexCoord2ivARB(GLenum target, const GLint *v);
void  glMultiTexCoord2ivARB(GLenum target, GLint *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord2sARB(GLenum target, GLshort s, GLshort t);
void  glMultiTexCoord2sARB(GLenum target, GLshort s, GLshort t);
//C     GLAPI void GLAPIENTRY glMultiTexCoord2svARB(GLenum target, const GLshort *v);
void  glMultiTexCoord2svARB(GLenum target, GLshort *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord3dARB(GLenum target, GLdouble s, GLdouble t, GLdouble r);
void  glMultiTexCoord3dARB(GLenum target, GLdouble s, GLdouble t, GLdouble r);
//C     GLAPI void GLAPIENTRY glMultiTexCoord3dvARB(GLenum target, const GLdouble *v);
void  glMultiTexCoord3dvARB(GLenum target, GLdouble *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord3fARB(GLenum target, GLfloat s, GLfloat t, GLfloat r);
void  glMultiTexCoord3fARB(GLenum target, GLfloat s, GLfloat t, GLfloat r);
//C     GLAPI void GLAPIENTRY glMultiTexCoord3fvARB(GLenum target, const GLfloat *v);
void  glMultiTexCoord3fvARB(GLenum target, GLfloat *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord3iARB(GLenum target, GLint s, GLint t, GLint r);
void  glMultiTexCoord3iARB(GLenum target, GLint s, GLint t, GLint r);
//C     GLAPI void GLAPIENTRY glMultiTexCoord3ivARB(GLenum target, const GLint *v);
void  glMultiTexCoord3ivARB(GLenum target, GLint *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord3sARB(GLenum target, GLshort s, GLshort t, GLshort r);
void  glMultiTexCoord3sARB(GLenum target, GLshort s, GLshort t, GLshort r);
//C     GLAPI void GLAPIENTRY glMultiTexCoord3svARB(GLenum target, const GLshort *v);
void  glMultiTexCoord3svARB(GLenum target, GLshort *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord4dARB(GLenum target, GLdouble s, GLdouble t, GLdouble r, GLdouble q);
void  glMultiTexCoord4dARB(GLenum target, GLdouble s, GLdouble t, GLdouble r, GLdouble q);
//C     GLAPI void GLAPIENTRY glMultiTexCoord4dvARB(GLenum target, const GLdouble *v);
void  glMultiTexCoord4dvARB(GLenum target, GLdouble *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord4fARB(GLenum target, GLfloat s, GLfloat t, GLfloat r, GLfloat q);
void  glMultiTexCoord4fARB(GLenum target, GLfloat s, GLfloat t, GLfloat r, GLfloat q);
//C     GLAPI void GLAPIENTRY glMultiTexCoord4fvARB(GLenum target, const GLfloat *v);
void  glMultiTexCoord4fvARB(GLenum target, GLfloat *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord4iARB(GLenum target, GLint s, GLint t, GLint r, GLint q);
void  glMultiTexCoord4iARB(GLenum target, GLint s, GLint t, GLint r, GLint q);
//C     GLAPI void GLAPIENTRY glMultiTexCoord4ivARB(GLenum target, const GLint *v);
void  glMultiTexCoord4ivARB(GLenum target, GLint *v);
//C     GLAPI void GLAPIENTRY glMultiTexCoord4sARB(GLenum target, GLshort s, GLshort t, GLshort r, GLshort q);
void  glMultiTexCoord4sARB(GLenum target, GLshort s, GLshort t, GLshort r, GLshort q);
//C     GLAPI void GLAPIENTRY glMultiTexCoord4svARB(GLenum target, const GLshort *v);
void  glMultiTexCoord4svARB(GLenum target, GLshort *v);
